fix(poetry): hide scrollbar

--- a/src/components/poetry/poetry.module.scss
+++ b/src/components/poetry/poetry.module.scss
@@ -9,13 +9,11 @@
     margin: 0;
   }
 
-  :global {
-    ::-webkit-scrollbar {
-      width: 0;
-      height: 0;
-      display: none;
-      scrollbar-width: none;
-    }
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    display: none;
+    scrollbar-width: none;
   }
 }
 
